bugfix: переопределены свойства letter-spacing и font-feature-settings

--- a/blocks/body-text/_type/body-text_type_social.css
+++ b/blocks/body-text/_type/body-text_type_social.css
@@ -1,4 +1,6 @@
-.body-text_type_social{
+.body-text_type_social {
   font-size: 16px;
-line-height: 1.12;
+  line-height: 1.12;
+  font-feature-settings: normal;
+  letter-spacing: normal;
 }
