--- a/blocks/body-text/body-text.css
+++ b/blocks/body-text/body-text.css
@@ -5,7 +5,7 @@
   font-size: 20px;
   line-height: 1.4;
   letter-spacing: -0.01em;
-  font-feature-settings: 'ss01' on;
+  font-feature-settings: "ss01" on;
   margin: 0;
   padding: 0;
 }
